business/apps/pnats/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pnats-staging
  labels:
    app.kubernetes.io/part-of: pnats
    environment: staging
